[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supply_chain_simulator"
version = "1.0.0"
description = "Adaptive Global Supply Chain Crisis Simulator with Partial Observability and Uncertainty"
authors = [
    { name = "anush76", email = "anush@example.com" }
]
dependencies = [
    "pydantic",
    "networkx",
    "openai>=1.0.0",
    "fastapi",
    "uvicorn[standard]",
    "openenv-core>=0.2.0"
]

[project.scripts]
supply-chain-simulator = "server.app:main"
openenv-server = "server.app:main"
server = "server.app:main"

[tool.setuptools]
packages = ["supply_chain", "server"]
